2006-06-23  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/genhash.c: fixing bug in unused code (see bugzilla #46)

2006-06-07  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_presence.c: improvied auto-unsubscribes

2006-06-01  Matthias Wimmer  <m@tthias.eu>

    * xdb_sql/xdb_sql.c: some minor cleanup esp. of names

2006-05-31  Matthias Wimmer  <m@tthias.eu>

    * jsm/authreg.c: right namespaces for jabber:iq:register-get-response
    * jsm/modules/mod_auth_digest.c: same
    * jsm/modules/mod_auth_plain.c: same

2006-05-29  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_roster.c: changed iteration on roster items
    * jsm/jsm.h: same

2006-05-29  Matthias Wimmer  <m@tthias.eu>

    * xdb_sql/xdb_sql.c: XML data check in xdb_sql results

2006-05-27  Matthias Wimmer  <m@tthias.eu>

    * jabber.xml.dist.in: fixing but in jabber:iq:register for xdb_sql

2006-05-24  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_presence.c: (de)serialize state of mod_presence

2006-05-23  Matthias Wimmer  <m@tthias.eu>

    * jsm/deliver.c: do not auto-unsubscribe on unavailable presence
    * jsm/utils.c: do not send presences after unsubscription
    * jsm/jsm.h: same
    * jsm/modules/mod_roster.c: same
    * jsm/jsm.h: keep a list of JIDs a user is interested in their presence
    * jsm/util.c: same
    * jsm/modules/mod_roster.c: same
    * jsm/modules/mod_presence.c: completing subscription syncronization

2006-05-22  Matthias Wimmer  <m@tthias.eu>

    * jsm/serialization.c: correctly restoring session start time
    * jsm/deliver.c: first part of inter-server subscription syncronization
    * jsm/modules/mod_presence.c: same

2006-05-21  Matthias Wimmer  <m@tthias.eu>

    * jsm/sessions.c: generate more random session IDs
    * jabberd/jabberd.h: notify the instance of their hosts
    * jabberd/deliver.c: same
    * jsm/jsm.c: same
    * jsm/jsm.h: load serialized session manager state on startup
    * jsm/serialization.c: same